# rip

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: rip-config.cmake
rip/: CMakeLists.txt
rip-hl/: CMakeLists.txt
rip-hl/src/: CMakeLists.txt
rip-hl/src/rip/: byteswap.h
rip-hl/src/rip/binary/: stream.h  types.h
rip-hl/src/rip/binary/accessors/: binary-stream.h  json.h
rip-hl/src/rip/binary/containers/binary-file/: BinaryFile.cpp  BinaryFile.h  common.h  v1.cpp  v1.h  v2.h
rip-hl/src/rip/binary/containers/mirage/: v1.h  v2.h
rip-hl/src/rip/binary/containers/swif/: SWIF.cpp  SWIF.h
rip-hl/src/rip/binary/serialization/: BinarySerializer2.h  BlobSerializer.h  BlobWorker.h  JsonDeserializer.h  JsonSerializer.h  PointerDisambiguationStore.h  ReflectCppSerializer.h  ReflectionDeserializer.h  ReflectionSerializer.h  Serializer.h
rip-hl/src/rip/hson/: HsonDeserializer.h  HsonSerializer.h  JsonReflections.h
rip-hl/src/rip/reflection/: ReflectiveOperations.h  RflClassGen.h  opaque.h
rip-hl/src/rip/reflection/db/: InGameDB.h
rip-hl/src/rip/reflection/he2/: opaque-array.h
rip-hl/src/rip/reflection/traversals/: algorithm-base.h  he2.h  rflclass.h  simplerfl.h  types.h
rip-hl/src/rip/schemas/: hedgeset.h  schema.h
rip-hl/src/rip/util/: byteswap.h  json-path.h  magic.h  math.h  memory.h  object-id-guids.h
rip-hl/tests/: CMakeLists.txt
rip-hl/tests/rip/binary/accessors/: json.cpp
rip/src/: CMakeLists.txt  config.cpp  config.h  convert-common.h  convert-impl.h  convert-impl.in.cpp  convert.cpp  convert.h  main.cpp  resource-table.h  util.h
rip/src/io/: BinaryInputFile.h  HsonInputFile.h  InputFile.h  JsonInputFile.h  MirageInputFile.h  SWIFInputFile.h  load_hedgeset_template.h  load_input.h  (+2 more)
